force-app/main/default/objects/Account/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>Aniversário</label>
    <type>Date</type>
</CustomField>