force-app/main/default/objects/Account/fields/DefaultClass__c.field-meta.xml
<CustomField>
    <fullName>DefaultClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordType.Name</field>
            <operation>equals</operation>
            <value>Class</value>
        </filterItems>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>AccountClasses</relationshipName>
    <type>Lookup</type>
</CustomField>