force-app/main/default/objects/Account/fields/DefaultColor__c.field-meta.xml
<CustomField>
    <fullName>DefaultColor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Color</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts (Default Color)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>