force-app/main/default/objects/Account/fields/DefaultRace__c.field-meta.xml
<CustomField>
    <fullName>DefaultRace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Race</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts (Default Race)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>