force-app/main/default/objects/Account/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Senha usada pelo usuário</description>
    <label>Senha</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>