force-app/main/default/objects/Account/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Username used by the user to login</description>
    <externalId>true</externalId>
    <label>Nome de usuário</label>
    <length>31</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>