force-app/main/default/objects/Account/validationRules/PasswordValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PasswordValidation</fullName>
    <active>true</active>
    <description>Checks for password validation</description>
    <errorConditionFormula>NOT(REGEX(Password__c, &apos;^(?=.*?[A-z])(?=.*?[0-9]).{6,}$&apos;))</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>The password must have at least 6 characters, one letter and one number</errorMessage>
</ValidationRule>