force-app/main/default/objects/Account/validationRules/UsernameTooShort.validationRule-meta.xml
<ValidationRule>
    <fullName>UsernameTooShort</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(TRIM(Username__c)) &lt; 3</errorConditionFormula>
    <errorDisplayField>Username__c</errorDisplayField>
    <errorMessage>The username is too short, your username must be at least 3 characters long</errorMessage>
</ValidationRule>